--- a/OnionConsumeWebAPI/Views/ResultFlightView/FlightView.cshtml
+++ b/OnionConsumeWebAPI/Views/ResultFlightView/FlightView.cshtml
@@ -17,12 +17,13 @@
     <!-- Favicon  -->
     <link rel="icon" href="~/img/favicon.png">
     <!-- Style css -->
-    <link rel="stylesheet" href="~/css/vendors.css">
-    <link rel="stylesheet" href="~/css/main.css">
+    <link rel="stylesheet" href="~/css/vendors.min.css">
+   @*  <link rel="stylesheet" href="~/css/main.css">
     <link rel="stylesheet" href="~/css/style.css">
-    <link rel="stylesheet" href="~/css/daterangepicker.css">
-    <link href="~/css/roundviewpage.css" rel="stylesheet" />
-    <link href="~/css/indexvny.css" rel="stylesheet" />
+    <link rel="stylesheet" href="~/css/daterangepicker.css"> *@
+    <link rel="stylesheet" href="/css/style.min.css" />
+   @*  <link href="~/css/roundviewpage.css" rel="stylesheet" />
+    <link href="~/css/indexvny.css" rel="stylesheet" /> *@
    
 </head>
 <body>
