--- a/OnionConsumeWebAPI/Views/FlightSearchIndex/Index.cshtml
+++ b/OnionConsumeWebAPI/Views/FlightSearchIndex/Index.cshtml
@@ -975,10 +975,10 @@
 		<script src="~/js/vendors.js"></script>
 		<script src="~/js/main.js"></script>
 		<!-- Active js -->
-		<script src="~/js/custom.js/indexpage.js"></script>
+		@* <script src="~/js/custom.js/indexpage.js"></script>
 		<script src="~/lib/jquery/chosen.jquery.js"></script>
-		<script src="~/lib/jquery/chosen.jquery.min.js"></script>
-
+		<script src="~/lib/jquery/chosen.jquery.min.js"></script> *@
+		<script src="~/js/site.min.js"></script>
 
 
 	}
