--- a/OnionConsumeWebAPI/Views/Shared/_Layout.cshtml
+++ b/OnionConsumeWebAPI/Views/Shared/_Layout.cshtml
@@ -9,10 +9,11 @@
     <title>Jetways Travels</title>
     <!-- Favicon  -->
     <link rel="icon" href="~/img/favicon.png">
+    <link rel="stylesheet" href="/css/style.min.css" />
     <!-- Style css -->
-    <link rel="stylesheet" href="~/css/style.css">
+    @* <link rel="stylesheet" href="~/css/style.css">
     <link rel="stylesheet" href="~/css/main.css">
-    <link rel="stylesheet" href="~/css/daterangepicker.css">
+    <link rel="stylesheet" href="~/css/daterangepicker.css"> *@
 
 
 </head>
