--- a/OnionConsumeWebAPI/wwwroot/css/IndexVny.css
+++ b/OnionConsumeWebAPI/wwwroot/css/IndexVny.css
@@ -14,7 +14,7 @@
 
     .autoarrival .chosen-drop {
         border: 1px solid #d4d4d4;
-        box-shadow: 0 4px 5px 0 rgb(0 0 0 / 22%);
+       /* box-shadow: 0 4px 5px 0 rgb(0 0 0 / 22%);*/
         margin-top: -60px;
         background: #fff;
         padding: 10px;
@@ -56,7 +56,7 @@
 
 .chosen-drop {
     border: 1px solid #d4d4d4;
-    box-shadow: 0 4px 5px 0 rgb(0 0 0 / 22%);
+    /*box-shadow: 0 4px 5px 0 rgb(0 0 0 / 22%);*/
     margin-top: -60px;
     background: #fff;
     padding: 2px 10px;
@@ -195,7 +195,7 @@
 
 .auto-suggest li::before {
     content: url('../img/plane-icn.png');
-    Replace 'flight-icon.png' with the path to your flight icon margin-right: 5px;
+   /* Replace: 'flight-icon.png' with the path to your flight icon margin-right: 5px;*/
 }
 
 .rounddateinput {
