--- a/OnionConsumeWebAPI/Views/AKTripsell/_AKTravellerInfoPartialView.cshtml
+++ b/OnionConsumeWebAPI/Views/AKTripsell/_AKTravellerInfoPartialView.cshtml
@@ -4,7 +4,9 @@
 
 }
 <div class="py-15 px-20 rounded-4 text-15 bg-blue-1-05 mb-10">
-    <div class="d-flex justify-content-end" style="margin-bottom:-15px;"><button id="checkboxLead" class="checkbox-button2" onclick="toggleCheckbox()"></button></div>
+    <div class="d-flex justify-content-end" style="margin-bottom:-15px;">
+        <span style="margin-right:15px;"><b>Same Lead Passengers Contact Details</b></span>
+        <button id="checkboxLead" class="checkbox-button2" onclick="toggleCheckbox()"></button></div>
 
     <form asp-action="TravllerDetails" asp-controller="AATripsell" method="post" id="passengerForm">
         @{
