--- a/OnionConsumeWebAPI/Views/RoundAATripsell/_ContactDetailsPartialView.cshtml
+++ b/OnionConsumeWebAPI/Views/RoundAATripsell/_ContactDetailsPartialView.cshtml
@@ -42,7 +42,7 @@
 
         <div class="col-md-2 phone-number">
             <div class="form-input">
-                <input type="text" name="number" id="number" class="phoneNClass" placeholder="Phone Number" oninput="validatePhoneNumber(event)">
+                <input type="text" name="number" id="number" maxlength="10" class="phoneNClass" placeholder="Phone Number" oninput="validatePhoneNumber(event)">
 
             </div>
             <p id="error-message8" class="error-message" style="display:none">Enter Phone Number</p>
