--- a/OnionConsumeWebAPI/Views/RoundAATripsell/_TravellerInfoPartialView.cshtml
+++ b/OnionConsumeWebAPI/Views/RoundAATripsell/_TravellerInfoPartialView.cshtml
@@ -834,7 +834,7 @@
                 if (input.value === "") {
                     let phoneToDisplay = document.querySelector(".error-phoneN");
                     phoneToDisplay.style.display = "block";
-                    phoneToDisplay.innerText = "Phone number is required.";
+                    phoneToDisplay.innerText = "";
                     input.focus();
                 } else {
                     let phoneToDisplay = document.querySelector(".error-phoneN");
