--- a/OnionConsumeWebAPI/Views/AATripsell/_ServiceRequestsPartialView.cshtml
+++ b/OnionConsumeWebAPI/Views/AATripsell/_ServiceRequestsPartialView.cshtml
@@ -830,48 +830,51 @@
 
                                                 @{
                                                     List<SelectListItem> mealOptions = new List<SelectListItem>();
-                                                    for (int s = 0; s < Model.Meals.legSsrs[0].legssrs.Count; s++)
+                                                    if (Model.Meals.legSsrs.Count > 0)
                                                     {
-                                                        // for (int sm = 0; sm < Model.Meals.legSsrs[0].legssrs[s].legpassengers.Count; sm++)
-                                                        // {
-                                                        string ssrprice = Model.Meals.legSsrs[0].legssrs[s].legpassengers[0].price;
-                                                        string Mealcode = Model.Meals.legSsrs[0].legssrs[s].ssrCode;
-                                                       // string MealcodeData = Mealcode.StartsWith("V", StringComparison.OrdinalIgnoreCase).ToString();
-                                                        string Mealname = Model.Meals.legSsrs[0].legssrs[s].name + " ₹" + @Model.Meals.legSsrs[0].legssrs[s].legpassengers[0].price;
-                                                        ssrkey = Model.Meals.legSsrs[0].legssrs[s].legpassengers[pa].ssrKey + "_" + @Model.Meals.legSsrs[0].legssrs[s].legpassengers[0].price;
-                                                        string passengerKey = Model.Meals.legSsrs[0].legssrs[s].legpassengers[pa].passengerKey;
-                                                        // if (MealcodeData != "False")
-                                                        //{
-
-
-                                                        //---------------------------
-                                                        string MealImagelist = string.Empty;
-                                                        // string querymeal = @Model.Meals.legSsrs[0].legssrs[s].ssrCode;
-                                                        var Mealdata = MealImageList.GetAllmeal().Where(x => x.MealCode == Mealcode).SingleOrDefault();
-                                                        if (Mealdata != null)
+                                                        for (int s = 0; s < Model.Meals.legSsrs[0].legssrs.Count; s++)
                                                         {
-                                                            MealImagelist = MealImageList.GetAllmeal().Where(x => x.MealCode == Mealcode).SingleOrDefault().MealImage;
+                                                            // for (int sm = 0; sm < Model.Meals.legSsrs[0].legssrs[s].legpassengers.Count; sm++)
+                                                            // {
+                                                            string ssrprice = Model.Meals.legSsrs[0].legssrs[s].legpassengers[0].price;
+                                                            string Mealcode = Model.Meals.legSsrs[0].legssrs[s].ssrCode;
+                                                            // string MealcodeData = Mealcode.StartsWith("V", StringComparison.OrdinalIgnoreCase).ToString();
+                                                            string Mealname = Model.Meals.legSsrs[0].legssrs[s].name + " ₹" + @Model.Meals.legSsrs[0].legssrs[s].legpassengers[0].price;
+                                                            ssrkey = Model.Meals.legSsrs[0].legssrs[s].legpassengers[pa].ssrKey + "_" + @Model.Meals.legSsrs[0].legssrs[s].legpassengers[0].price;
+                                                            string passengerKey = Model.Meals.legSsrs[0].legssrs[s].legpassengers[pa].passengerKey;
+                                                            // if (MealcodeData != "False")
+                                                            //{
+
+
+                                                            //---------------------------
+                                                            string MealImagelist = string.Empty;
+                                                            // string querymeal = @Model.Meals.legSsrs[0].legssrs[s].ssrCode;
+                                                            var Mealdata = MealImageList.GetAllmeal().Where(x => x.MealCode == Mealcode).SingleOrDefault();
+                                                            if (Mealdata != null)
+                                                            {
+                                                                MealImagelist = MealImageList.GetAllmeal().Where(x => x.MealCode == Mealcode).SingleOrDefault().MealImage;
+                                                            }
+                                                            string ImageUrl = Url.Content("/img/images/" + MealImagelist + ".png");
+
+                                                            string combinedValue = ssrkey + "|" + ImageUrl;
+                                                            if (ssrkey != null)
+                                                            {
+                                                                mealOptions.Add(new SelectListItem { Text = Mealname, Value = combinedValue });
+                                                            }
+                                                            //---------------------------
+
+
+                                                            // if (ssrkey != null)
+                                                            // {
+                                                            //     mealOptions.Add(new SelectListItem { Text = Mealname, Value = ssrkey });
+
+                                                            // }
+
+
+                                                            //  }
+                                                            //}
+
                                                         }
-                                                        string ImageUrl = Url.Content("/img/images/" + MealImagelist + ".png");
-
-                                                        string combinedValue = ssrkey + "|" + ImageUrl;
-                                                        if (ssrkey != null)
-                                                        {
-                                                            mealOptions.Add(new SelectListItem { Text = Mealname, Value = combinedValue });
-                                                        }
-                                                        //---------------------------
-
-
-                                                        // if (ssrkey != null)
-                                                        // {
-                                                        //     mealOptions.Add(new SelectListItem { Text = Mealname, Value = ssrkey });
-
-                                                        // }
-
-
-                                                        //  }
-                                                        //}
-
                                                     }
                                                     <div class="d-flex">
                                                         @if (mealOptions.Count == 0)
@@ -883,26 +886,27 @@
                                                         else
                                                         {
 
-                                                                    <select id="ddlMealOptions" class="servc-bordr" style="display:none">
-                                                                        <option value=""><b>Please select Meal</b></option>
-                                                                        @foreach (var option in mealOptions)
+                                                            <select id="ddlMealOptions" class="servc-bordr" style="display:none">
+                                                                <option value=""><b>Please select Meal</b></option>
+                                                                @foreach (var option in mealOptions)
                                                                 {
 
-                                                                            <option class="dropdown-option" value="@option.Value">
+                                                                    <option class="dropdown-option" value="@option.Value">
                                                                         @option.Text
                                                                     </option>
                                                                 }
                                                             </select>
-                                                                    <div id="ddlMealOptions" class="servc-bordr custom-dropdown">
-                                                                        <button class="dropdown-btn">Please select Meal
-                                                                            <i class="fas fa-chevron-down" id="dropdownIcon"></i>
-                                                                        </button>
-                                                                        <div class="dropdown-options">
-                                                                            <div class="dropdown-option" data-value="00_00">
-                                                                                Please select Meal
-                                                                                
-                                                                            </div>
-                                                                            @foreach (var option in mealOptions)
+                                                            <div id="ddlMealOptions" class="servc-bordr custom-dropdown">
+                                                                <button class="dropdown-btn">
+                                                                    Please select Meal
+                                                                    <i class="fas fa-chevron-down" id="dropdownIcon"></i>
+                                                                </button>
+                                                                <div class="dropdown-options">
+                                                                    <div class="dropdown-option" data-value="00_00">
+                                                                        Please select Meal
+
+                                                                    </div>
+                                                                    @foreach (var option in mealOptions)
                                                                     {
 
 
@@ -912,15 +916,15 @@
 
                                                                         // string ImageUrl = option.Value.Contains("MMFD") ? "/img/images/non-veg-img-1.png" : "";
                                                                         // <div class="dropdown-option" data-img="@ImageUrl" data-value="@option.Value">
-                                                                                <div class="dropdown-option" data-img="@imageUrl" data-value="@optionValue">
+                                                                        <div class="dropdown-option" data-img="@imageUrl" data-value="@optionValue">
 
-                                                                                    @option.Text                                                           
-                                                                                </div>
-                                                                    }
+                                                                            @option.Text
                                                                         </div>
-                                                                    </div>
+                                                                    }
+                                                                </div>
+                                                            </div>
 
-                                                                    <img class="mealImagePreview" style="display: none;" />
+                                                            <img class="mealImagePreview" style="display: none;" />
 
                                                         }
                                                         <input type="hidden" id="hiddenSsrKey" name="ssrKey" value="" />
@@ -1150,24 +1154,25 @@
                                                         }
                                                         <div class="d-flex">
 
-                                                                    <select id="ddlMealOptions" class="servc-bordrCon" style="display:none">
-                                                                        <option value=""><b>Please select Meal</b></option>
-                                                                        @foreach (var option in mealOptions)
+                                                            <select id="ddlMealOptions" class="servc-bordrCon" style="display:none">
+                                                                <option value=""><b>Please select Meal</b></option>
+                                                                @foreach (var option in mealOptions)
                                                                 {
                                                                     <option value="@option.Value">
                                                                         @option.Text
                                                                     </option>
                                                                 }
                                                             </select>
-                                                                    <div id="ddlMealOptions" class="servc-bordrCon custom-dropdown">
-                                                                        <button class="dropdown-btn">Please select Meal
-                                                                            <i class="fas fa-chevron-down dropdown-btn" id="dropdownIcon"></i>
-                                                                        </button>
-                                                                        <div class="dropdown-options">
-                                                                            <div class="dropdown-option" data-value="00_00">
-                                                                                Please select Meal
-                                                                            </div>
-                                                                            @foreach (var option in mealOptions)
+                                                            <div id="ddlMealOptions" class="servc-bordrCon custom-dropdown">
+                                                                <button class="dropdown-btn">
+                                                                    Please select Meal
+                                                                    <i class="fas fa-chevron-down dropdown-btn" id="dropdownIcon"></i>
+                                                                </button>
+                                                                <div class="dropdown-options">
+                                                                    <div class="dropdown-option" data-value="00_00">
+                                                                        Please select Meal
+                                                                    </div>
+                                                                    @foreach (var option in mealOptions)
                                                                     {
                                                                         var values = option.Value.Split('|');
                                                                         string optionValue = values[0];
@@ -1175,14 +1180,14 @@
 
                                                                         // string ImageUrl = option.Value.Contains("MMFD") ? "/img/images/non-veg-img-1.png" : "";
                                                                         // <div class="dropdown-option" data-img="@ImageUrl" data-value="@option.Value">
-                                                                                <div class="dropdown-option" data-img="@imageUrl" data-value="@optionValue">
-                                                                                    @option.Text
-                                                                                </div>
+                                                                        <div class="dropdown-option" data-img="@imageUrl" data-value="@optionValue">
+                                                                            @option.Text
+                                                                        </div>
                                                                     }
-                                                                            
-                                                                        </div>
-                                                                        </div>
-                                                                    <img class="mealImagePreview" style="display: none;" />
+
+                                                                </div>
+                                                            </div>
+                                                            <img class="mealImagePreview" style="display: none;" />
 
 
                                                             <input type="hidden" id="hiddenSsrKey2" name="ssrKey" value="" />
