--- a/OnionConsumeWebAPI/Views/AKTripsell/_AkServiceRequestsPartialView.cshtml
+++ b/OnionConsumeWebAPI/Views/AKTripsell/_AkServiceRequestsPartialView.cshtml
@@ -555,7 +555,7 @@
                                                     @{
 
                                                         List<SelectListItem> mealOptions = new List<SelectListItem>();
-                                                        if (Model.Meals.legSsrs.Count > 0)
+                                                        if (Model.AkMealslist.legSsrs.Count > 0)
                                                         {
                                                             for (int s = 0; s < Model.AkMealslist.legSsrs[0].legssrs.Count; s++)
                                                             {
@@ -621,14 +621,14 @@
 
                                                 // List<SelectListItem> BaggageOptions = new List<SelectListItem>();
                                                     var baggageOptions = new List<SelectListItem>();
-                                                   
+
 
                                                     for (int s = 0; s < Model.AkBaggageDetails.journeySsrsBaggage[0].baggageSsr.Count; s++)
                                                     {
                                                         string priceBaggage = Model.AkBaggageDetails.journeySsrsBaggage[0].baggageSsr[s].passengersAvailabilityBaggage[0].price;
                                                         string Sssrcode = Model.AkBaggageDetails.journeySsrsBaggage[0].baggageSsr[s].ssrCode;
                                                         string bagcode = Sssrcode.StartsWith("X", StringComparison.OrdinalIgnoreCase).ToString();
-                                                        var bagname = Model.AkBaggageDetails.journeySsrsBaggage[0].baggageSsr[s].name + "@" + Model.AkBaggageDetails.journeySsrsBaggage[0].baggageSsr[s].passengersAvailabilityBaggage[0].price + " " + Model.AkBaggageDetails.journeySsrsBaggage[0].baggageSsr[s].ssrCode;
+                                                        var bagname = Model.AkBaggageDetails.journeySsrsBaggage[0].baggageSsr[s].name + "@" + Model.AkBaggageDetails.journeySsrsBaggage[0].baggageSsr[s].passengersAvailabilityBaggage[0].price;// + " " + Model.AkBaggageDetails.journeySsrsBaggage[0].baggageSsr[s].ssrCode;
                                                         bagkey = Model.AkBaggageDetails.journeySsrsBaggage[0].baggageSsr[s].passengersAvailabilityBaggage[pa].ssrKey + "_" + Model.AkBaggageDetails.journeySsrsBaggage[0].baggageSsr[s].passengersAvailabilityBaggage[0].price;
                                                         if (bagcode != "False")
                                                         {
